attempt fix on mobile parallax image size issue 7

--- a/style.scss
+++ b/style.scss
@@ -112,6 +112,7 @@ body {
   align-items: flex-end;
   @media (max-width: 415px) {
     background-attachment: scroll;
+    background-size: auto;
   }
 }
 
